# LexiaEngine2

./: .gitignore  CMakeLists.txt  DOCS.md  README.md  README_ENG.MD  build.sh  setup.sh
editor/: editor
editor/src/: Compiler.cpp  Compiler.h  ConfigEditor.cpp  ConfigEditor.h  EditorWindow.cpp  EditorWindow.h  MapEditor.cpp  MapEditor.h  ProjectManager.cpp  ProjectManager.h  main.cpp
engine/include/: Config.h  Map.h  Player.h  Raycaster.h  Screen.h  Texture.h
engine/src/: Config.c  Config.cpp  Map.c  Map.cpp  Player.c  Player.cpp  Raycaster.c  Raycaster.cpp  Screen.c  Screen.cpp  Texture.c
